--- a/pages/our_location.html
+++ b/pages/our_location.html
@@ -10,12 +10,12 @@
 
     <div class="previous-next">
         <a href="#/welcome">
-            <button type="button" class="btn btn-default chevronButton" aria-label="Left Align">
+            <button type="button" class="btn btn-default chevronButton" aria-label="Previous">
                 <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
             </button>
         </a>
         <!-- <a href="#/location"> -->
-            <button type="button" class="btn btn-default chevronButton" aria-label="Left Align" ng-click="olc.setOurLocation(olc.ourInputZip)">
+            <button type="button" class="btn btn-default chevronButton" aria-label="Next" ng-click="olc.setOurLocation(olc.ourInputZip)">
                 <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
             </button>
         <!-- </a> -->
