--- a/pages/interests_outdoors.html
+++ b/pages/interests_outdoors.html
@@ -3,37 +3,37 @@
     <h1>to stay active we like</h1><p class="input-fyi">(select at least one interest)</p>
     <div class="interest-buttons">
         <div class="outdoor groupings">
-            <button type="button" class="btn btn-default interest-btn-active" aria-label="Left Align"
+            <button type="button" class="btn btn-default interest-btn-active" aria-label="bicycling"
                     ng-click="iod.bicycling=!iod.bicycling; iod.outdoorInterestButtonClicked();"
                     ng-class="{buttonHighlighted: iod.bicycling}">bicycling</button>
-            <button type="button" class="btn btn-default interest-btn-active" aria-label="Left Align"
+            <button type="button" class="btn btn-default interest-btn-active" aria-label="bowling"
                     ng-click="iod.bowling=!iod.bowling; iod.outdoorInterestButtonClicked();"
                     ng-class="{buttonHighlighted: iod.bowling}">bowling</button>
-            <button type="button" class="btn btn-default interest-btn-active" aria-label="Left Align"
+            <button type="button" class="btn btn-default interest-btn-active" aria-label="golfing"
                     ng-click="iod.golf=!iod.golf; iod.outdoorInterestButtonClicked();"
                     ng-class="{buttonHighlighted: iod.golf}">golfing</button>
 
-            <button type="button" class="btn btn-default interest-btn-active" aria-label="Left Align"
+            <button type="button" class="btn btn-default interest-btn-active" aria-label="hiking"
                     ng-click="iod.hiking=!iod.hiking; iod.outdoorInterestButtonClicked();"
                     ng-class="{buttonHighlighted: iod.hiking}">hiking</button>
-            <button type="button" class="btn btn-default interest-btn-active" aria-label="Left Align"
+            <button type="button" class="btn btn-default interest-btn-active" aria-label="horseback riding"
                     ng-click="iod.horsebackRiding=!iod.horsebackRiding; iod.outdoorInterestButtonClicked();"
                     ng-class="{buttonHighlighted: iod.horsebackRiding}">horseback-riding</button>
-            <button type="button" class="btn btn-default interest-btn-active" aria-label="Left Align"
+            <button type="button" class="btn btn-default interest-btn-active" aria-label="kayaking / paddleboarding"
                     ng-click="iod.kayaking=!iod.kayaking; iod.outdoorInterestButtonClicked();"
                     ng-class="{buttonHighlighted: iod.kayaking}">kayaking/paddleboarding</button>
 
-            <button type="button" class="btn btn-default interest-btn-active" aria-label="Left Align"
+            <button type="button" class="btn btn-default interest-btn-active" aria-label="motorcycling"
                     ng-click="iod.motorcycling=!iod.motorcycling; iod.outdoorInterestButtonClicked();"
                     ng-class="{buttonHighlighted: iod.motorcycling}">motorcycling</button>
-            <button type="button" class="btn btn-default interest-btn-active" aria-label="Left Align"
+            <button type="button" class="btn btn-default interest-btn-active" aria-label="racquetball"
                     ng-click="iod.racquetball=!iod.racquetball; iod.outdoorInterestButtonClicked();"
                     ng-class="{buttonHighlighted: iod.racquetball}">racquetball</button>
-            <button type="button" class="btn btn-default interest-btn-active" aria-label="Left Align"
+            <button type="button" class="btn btn-default interest-btn-active" aria-label="tennis"
                     ng-click="iod.tennis=!iod.tennis; iod.outdoorInterestButtonClicked();"
                     ng-class="{buttonHighlighted: iod.tennis}">tennis</button>
 
-            <button type="button" class="btn btn-default interest-btn-active" aria-label="Left Align"
+            <button type="button" class="btn btn-default interest-btn-active" aria-label="walking"
                     ng-click="iod.walking=!iod.walking; iod.outdoorInterestButtonClicked();"
                     ng-class="{buttonHighlighted: iod.walking}">walking</button>
         </div>
@@ -42,12 +42,12 @@
     <!-----------Previous and Next buttons-------------->
     <div class="previous-next pull-right" ng-hide="iod.loggedIn">
         <a href="#/interests_out">
-            <button type="button" class="btn btn-default chevronButton" aria-label="Left Align" ng-click="iod.setOutdoorInterests()">
+            <button type="button" class="btn btn-default chevronButton" aria-label="Previous" ng-click="iod.setOutdoorInterests()">
                 <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
             </button>
         </a>
 
-            <button type="button" class="btn btn-default chevronButton" aria-label="Left Align"
+            <button type="button" class="btn btn-default chevronButton" aria-label="Next"
                     ng-disabled="iod.outdoorInterestCount()==0;" ng-click="iod.setUrl()">
                 <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
             </button>
@@ -55,13 +55,13 @@
 
     <!-----------Save and Cancel buttons-------------->
     <div class="edit-profile-buttons" ng-show="iod.loggedIn">
-        <button type="button" class="btn btn-default chevronButton" aria-label="Previous"
+        <button type="button" class="btn btn-default chevronButton" aria-label="Save"
                 ng-click="iod.clickSaveButton();">
             Save
         </button>
 
         <a href="#/edit_profile">
-            <button type="button" class="btn btn-default chevronButton" aria-label="Next">
+            <button type="button" class="btn btn-default chevronButton" aria-label="Cancel">
                 Cancel
             </button>
         </a>
