--- a/pages/their_age_range.html
+++ b/pages/their_age_range.html
@@ -24,7 +24,8 @@
         </button>
     </div>
 
-    <div class="previous-next pull-right">
+    <!-----------Previous and Next buttons-------------->
+    <div class="previous-next pull-right" ng-hide="tac.loggedIn">
         <a href="#/our_age_range">
             <button type="button" class="btn btn-default chevronButton" aria-label="Previous">
                 <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
@@ -35,5 +36,19 @@
                     ng-disabled='!tac.theirAgeMin'>
                 <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
             </button>
+    </div>
+
+    <!-----------Save and Cancel buttons-------------->
+    <div class="edit-profile-buttons" ng-show="tac.loggedIn">
+        <button type="button" class="btn btn-default chevronButton" aria-label="Previous"
+                ng-click="tac.clickSaveButton();">
+            Save
+        </button>
+
+        <a href="#/edit_profile">
+            <button type="button" class="btn btn-default chevronButton" aria-label="Next">
+                Cancel
+            </button>
+        </a>
     </div>
 </div>
