--- a/pages/signup_paragraph.html
+++ b/pages/signup_paragraph.html
@@ -8,9 +8,23 @@
     <p class="input-fyi textbox-fyi">characters left: {{spc.maxLength-spc.paragraph.length}}</p>
 
     <button type="button" class="btn btn-default btn-block welcome_button"
-            ng-click="spc.signUpParagraphButtonClick()" aria-label="Submit">submit</button>
+            ng-click="spc.signUpParagraphButtonClick()" aria-label="Submit" ng-hide="spc.loggedIn">submit</button>
     <p class="alert alert-danger alert-dismissible fade in paragraph-minimum" ng-hide="spc.validationText">Please add a paragraph
         of at least 50 characters.
     </p>
+
+    <!-----------Save and Cancel buttons-------------->
+    <div class="edit-profile-buttons" ng-show="spc.loggedIn">
+        <button type="button" class="btn btn-default chevronButton" aria-label="Save"
+                ng-click="spc.clickSaveButton();">
+            Save
+        </button>
+
+        <a href="#/edit_profile">
+            <button type="button" class="btn btn-default chevronButton" aria-label="Cancel">
+                Cancel
+            </button>
+        </a>
+    </div>
 </div>
 
