--- a/pages/signup_picture.html
+++ b/pages/signup_picture.html
@@ -9,7 +9,8 @@
         </div>
         <br>
     </div>
-    <button type="button" class="btn btn-default btn-block welcome_button" ng-click="sup.setUrl();">
+    <button type="button" class="btn btn-default btn-block welcome_button" ng-click="sup.setUrl();" ng-hide="sup.loggedIn">
         submit
     </button>
+
 </div>
