added the edit profile button to the match page, did a little styling to the edit profile page

--- a/pages/edit_profile.html
+++ b/pages/edit_profile.html
@@ -7,30 +7,30 @@
             <!--<a href="#/signup_name"><button type="button">Names</button></a>-->
         <!--</div>-->
 
-        <div class="profile-list list-group-item" ng-click="epc.zip=!epc.zip">Zip Code</div>
-        <div class="profile-option" ng-show="epc.zip">
+        <!--<div class="profile-list list-group-item" ng-click="epc.zip=!epc.zip">Search Distance</div>-->
+        <div class="profile-option">
             <!--<a href="#/our_location"><button type="button">Zip Code</button></a>-->
-            <a href="#/distance"><button type="button">Search Distance</button></a>
+            <a href="#/distance"><button type="button" class="btn">Search Distance</button></a>
         </div>
 
-        <div class="profile-list list-group-item" ng-click="epc.ages=!epc.ages">Ages</div>
-        <div class="profile-option" ng-show="epc.ages">
-            <a href="#/our_age_range"><button type="button">Our Age Range</button></a>
-            <a href="#/their_age_range"><button type="button">Their Age Range</button></a>
+        <!--<div class="profile-list list-group-item" ng-click="epc.ages=!epc.ages">Ages</div>-->
+        <div class="profile-option">
+            <a href="#/our_age_range"><button type="button" class="btn">Our Age Range</button></a>
+            <a href="#/their_age_range"><button type="button" class="btn">Their Age Range</button></a>
         </div>
 
-        <div class="profile-list list-group-item" ng-click="epc.paragraph=!epc.paragraph">Paragraph</div>
-        <div class="profile-option" ng-show="epc.paragraph">
+        <!--<div class="profile-list list-group-item" ng-click="epc.paragraph=!epc.paragraph">Paragraph</div>-->
+        <div class="profile-option">
             <!--<a href="#/signup_picture"><button type="button">Photograph of Us</button></a>-->
-            <a href="#/signup_paragraph"><button type="button">Paragraph describing selves</button></a>
+            <a href="#/signup_paragraph"><button type="button" class="btn">Paragraph</button></a>
         </div>
 
-        <div class="profile-list list-group-item" ng-click="epc.interests=!epc.interests">Interests</div>
-        <div class="profile-option" ng-show="epc.interests">
-            <a href="#/interests_home"><button type="button">Interests at Home</button></a>
-            <a href="#/interests_out"><button type="button">Interests Out</button></a>
-            <a href="#/interests_outdoors"><button type="button">Interests Outdoors</button></a>
-            <a href="#/interests_travel"><button type="button">Interests Travel</button></a>
+        <!--<div class="profile-list list-group-item" ng-click="epc.interests=!epc.interests">Interests</div>-->
+        <div class="profile-option">
+            <a href="#/interests_home"><button type="button" class="btn">Interests at Home</button></a>
+            <a href="#/interests_out"><button type="button" class="btn">Interests Out</button></a>
+            <a href="#/interests_outdoors"><button type="button" class="btn">Interests Outdoors</button></a>
+            <a href="#/interests_travel"><button type="button" class="btn">Interests Travel</button></a>
         </div>
 
       </div>
