--- a/pages/interests_home.html
+++ b/pages/interests_home.html
@@ -45,13 +45,13 @@
 
     <!-----------Save and Cancel buttons-------------->
     <div class="edit-profile-buttons" ng-show="ihc.loggedIn">
-        <button type="button" class="btn btn-default chevronButton" aria-label="Previous"
+        <button type="button" class="btn btn-default" aria-label="Previous"
                 ng-click="ihc.clickSaveButton();">
             Save
         </button>
 
         <a href="#/edit_profile">
-            <button type="button" class="btn btn-default chevronButton" aria-label="Next">
+            <button type="button" class="btn btn-default" aria-label="Next">
                 Cancel
             </button>
         </a>
