--- a/pages/interests_travel.html
+++ b/pages/interests_travel.html
@@ -38,13 +38,13 @@
 
     <!-----------Save and Cancel buttons-------------->
     <div class="edit-profile-buttons" ng-show="itc.loggedIn">
-            <button type="button" class="btn btn-default chevronButton" aria-label="Previous"
+            <button type="button" class="btn btn-default" aria-label="Previous"
                     ng-click="itc.clickSaveButton();">
                 Save
             </button>
 
         <a href="#/edit_profile">
-            <button type="button" class="btn btn-default chevronButton" aria-label="Next">
+            <button type="button" class="btn btn-default" aria-label="Next">
                 Cancel
             </button>
         </a>
