--- a/pages/match.html
+++ b/pages/match.html
@@ -24,4 +24,11 @@
         ng-click="mc.getMatches()">
         refresh / check for more
     </button>
+   <br>
+
+    <!---Edit Profile button-->
+   <a href="#/edit_profile"><button type="button" class="btn btn-default btn-block" aria-label="Edit Profile">
+        Edit Profile
+    </button>
+   </a>
 </div>
