--- a/pages/signup_paragraph.html
+++ b/pages/signup_paragraph.html
@@ -15,13 +15,13 @@
 
     <!-----------Save and Cancel buttons-------------->
     <div class="edit-profile-buttons" ng-show="spc.loggedIn">
-        <button type="button" class="btn btn-default chevronButton" aria-label="Save"
+        <button type="button" class="btn btn-default" aria-label="Save"
                 ng-click="spc.clickSaveButton();">
             Save
         </button>
 
         <a href="#/edit_profile">
-            <button type="button" class="btn btn-default chevronButton" aria-label="Cancel">
+            <button type="button" class="btn btn-default" aria-label="Cancel">
                 Cancel
             </button>
         </a>
