--- a/pages/interests_outdoors.html
+++ b/pages/interests_outdoors.html
@@ -55,13 +55,13 @@
 
     <!-----------Save and Cancel buttons-------------->
     <div class="edit-profile-buttons" ng-show="iod.loggedIn">
-        <button type="button" class="btn btn-default chevronButton" aria-label="Previous"
+        <button type="button" class="btn btn-default" aria-label="Previous"
                 ng-click="iod.clickSaveButton();">
             Save
         </button>
 
         <a href="#/edit_profile">
-            <button type="button" class="btn btn-default chevronButton" aria-label="Next">
+            <button type="button" class="btn btn-default" aria-label="Next">
                 Cancel
             </button>
         </a>
