--- a/pages/our_age_range.html
+++ b/pages/our_age_range.html
@@ -32,13 +32,13 @@
 
     <!-----------Save and Cancel buttons-------------->
     <div class="edit-profile-buttons" ng-show="oac.loggedIn">
-        <button type="button" class="btn btn-default chevronButton" aria-label="Previous"
+        <button type="button" class="btn btn-default" aria-label="Previous"
                 ng-click="oac.clickSaveButton();">
             Save
         </button>
 
         <a href="#/edit_profile">
-            <button type="button" class="btn btn-default chevronButton" aria-label="Next">
+            <button type="button" class="btn btn-default" aria-label="Next">
                 Cancel
             </button>
         </a>
